--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <table class="table table-striped" id="tablaid">
           <thead class="table-dark">
             <tr>
-              <th scope="col"> ID </th>
-              <th scope="col">FirstName</th>
-              <th scope="col">Email</th>
-              <th scope="col">lastName</th>
+              <th scope="col">ID</th>
+              <th scope="col">Nombres</th>
+              <th scope="col">Correo</th>
+              <th scope="col">Apellidos</th>
               <th scope="col">Avatar</th>
-              <th scope="col">Options</th>
+              <th scope="col">Opciones</th>
             </tr>
           </thead>
           <tbody>
